--- a/form.html
+++ b/form.html
@@ -11,9 +11,29 @@
     <label>Title</label>
     <input id="title" type="text"><br>
     <label>Content</label>
-    <input type="content" type="text"><br>
+    <input id="content" type="text"><br>
 
     <button id="submit">Submit</button>
+
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+    <script>
+    var article = {title:'', content:''}
+    $('#submit').click(function(){
+        article.title = $("#title").val()
+        article.content = $("#content").val()
+        $.ajax({
+            method: "POST",
+            url: '/new_article',
+            data: article
+        }).done(function(response){
+            console.log(response)
+        }).fail(function(response){
+            console.log(response)
+        })
+    })
+
+    </script>
 
 </body>
 </html>
